<resources>
    <string name="app_name">Project</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Register</string>
    <string name="title_activity_splash">SplashActivity</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>


    <string name="reghere">Register Here</string>

    <string name="fullname">Full Names</string>

    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="btnSave">Save</string>

    <string name="submit">Register</string>
    <string name="service">Choose Service</string>
    <string name="city">City</string>
    <string name="name">Your name</string>
    <string name="payment">Your name</string>
    <string name="cash">Cash Payments only.... </string>

    <string name="Link"> Are you a service provider? Create Profile </string>


    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_info_title">default info title</string>
    <string name="default_info_snippet">default info snippet</string>
    <string name="pick_place">pick place</string>

</resources>
